Fixed up Theme style sheets to remove extra space on top-left links.

--- a/themes-dist/ShadowBox/Global.css
+++ b/themes-dist/ShadowBox/Global.css
@@ -52,7 +52,6 @@ a:hover {
  *********************************************************/
 .seguelinks a {
     color: [[BG_LINK_COLOR]];
-    padding-left: 15px;
 }
 
 .seguelinks {
